# native

./: CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  start.sh
ffmpeg/etc/fonts/: fonts.conf
ffmpeg/include/libpng16/: pnglibconf.h
ffmpeg/lib/: libXau.la  libXau.so.6.0.0  libaribb24.la  libaribb24.so.0.0.0  libass.la  libass.so.9.0.1  libavdevice.so.58.13.100  libavfilter.so.7.110.100  libavformat.so.58.76.100  libavresample.so.4.0.0  libavutil.so.56.70.100  libbluray.la  libbluray.so.2.1.2  libfdk-aac.la  libfontconfig.la  libfontconfig.so.1.9.4  libfreetype.la  libfreetype.so.6.17.4  libfribidi.la  libfribidi.so.0.3.6  libkvazaar.la  libkvazaar.so.6  libmp3lame.la  libogg.la  libogg.so.0.8.2  libopencore-amrnb.la  libopencore-amrnb.so.0.0.3  libopencore-amrwb.la  libopencore-amrwb.so.0.0.3  libopenjp2.so.2.1.2  libopus.la  libopus.so.0.6.0  libpng16.la  libpng16.so.16.9.0  libpostproc.so.55.9.100  libsrt.so.1  libsrt.so.1.4.1  libswresample.so.3.9.100  libswscale.so.5.9.100  libtheora.la  (+69 more)
ffmpeg/lib/openjpeg-2.1/: OpenJPEGTargets-noconfig.cmake
ffmpeg/lib/pkgconfig/: aom.pc  aribb24.pc  fdk-aac.pc  fontconfig.pc  freetype2.pc  fribidi.pc  kvazaar.pc  libass.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libbluray.pc  libopenjp2.pc  libpng16.pc  libpostproc.pc  libswresample.pc  libswscale.pc  libwebp.pc  libwebpdemux.pc  libxml-2.0.pc  libzmq.pc  ogg.pc  opencore-amrnb.pc  opencore-amrwb.pc  opus.pc  srt.pc  (+38 more)
ffmpeg/lib64/: libvmaf.so.1  libvmaf.so.1.1.1
src/: bck.cpp  bck2.cpp  main.cpp
(+19 files in other folders)
